Remove redundant files specific for ADC4 device

--- a/fADC-demo-4.vcxproj
+++ b/fADC-demo-4.vcxproj
@@ -144,23 +144,23 @@
     <ClInclude Include="AbstractWindow.h" />
     <ClInclude Include="BaseDevice.h" />
     <ClInclude Include="BaseWindow.h" />
-    <ClInclude Include="CfgDlgAdc4.h" />
-    <ClInclude Include="ChannelDetailsAdc4.h" />
     <ClInclude Include="ConfigData.h" />
     <ClInclude Include="DaqSignal.h" />
     <ClInclude Include="DaqSystem.h" />
-    <ClInclude Include="DataAdc4.h" />
     <ClInclude Include="DataInRingBuffer.h" />
     <ClInclude Include="DataProcessor.h" />
     <ClInclude Include="DataProcessorMemCopy.h" />
     <ClInclude Include="DataProcessorSaveFile.h" />
     <ClInclude Include="DataProducer.h" />
     <ClInclude Include="DataSender.h" />
-    <ClInclude Include="DeviceAdc4.h" />
-    <ClInclude Include="DeviceAdc4Params.h" />
     <ClInclude Include="DeviceParams.h" />
+    <ClInclude Include="Device\ADC4\CfgDlgAdc4.h" />
+    <ClInclude Include="Device\ADC4\ChannelDetailsAdc4.h" />
+    <ClInclude Include="Device\ADC4\DataAdc4.h" />
+    <ClInclude Include="Device\ADC4\DeviceAdc4.h" />
+    <ClInclude Include="Device\ADC4\DeviceAdc4Params.h" />
+    <ClInclude Include="Device\ADC4\DevMonitorDataAdc4Type.h" />
     <ClInclude Include="DevMonitor.h" />
-    <ClInclude Include="DevMonitorDataAdc4Type.h" />
     <ClInclude Include="DevMonitorDataBaseType.h" />
     <ClInclude Include="LogDisplay.h" />
     <ClInclude Include="LogLines.h" />
