--- a/test.ini
+++ b/test.ini
@@ -1,7 +1,13 @@
+[device ADC4]
+trigger_card = 0
+trigger_channel = 4
+range_start = -1000
+range_end = 1000
+
 [card 0]
 id = 0
-idxMasterChannel = 0
-isCardEnabled = 1
+maskTriggerChannel = 16
+isEnabled = 1
 mode = 0
 
 [channel 0]
@@ -10,7 +16,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 1]
@@ -19,7 +25,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 2]
@@ -28,7 +34,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 3]
@@ -37,14 +43,23 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
+offset = 0
+
+[channel 4]
+precursor = 0
+length = 0
+isRetrigger = 0
+isEdgeMode = 1
+isRising = 0
+threshold = 0
 offset = 0
 
 
 [card 1]
 id = 1
-idxMasterChannel = -1
-isCardEnabled = 1
+maskTriggerChannel = 0
+isEnabled = 1
 mode = 0
 
 [channel 0]
@@ -53,7 +68,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 1]
@@ -62,7 +77,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 2]
@@ -71,7 +86,7 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
 offset = 0
 
 [channel 3]
@@ -80,7 +95,16 @@ length = 12
 isRetrigger = 0
 isEdgeMode = 1
 isRising = 0
-threshold = 10000
+threshold = -10000
+offset = 0
+
+[channel 4]
+precursor = 0
+length = 0
+isRetrigger = 0
+isEdgeMode = 1
+isRising = 0
+threshold = 0
 offset = 0
 
 
