Preliminary design of simulated fADC4 device

--- a/fADC-demo-5.vcxproj
+++ b/fADC-demo-5.vcxproj
@@ -117,6 +117,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;_SIMULATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>Default</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -165,6 +166,7 @@
     <ClInclude Include="Device\ADC4\DaqStatusAdc4Type.h" />
     <ClInclude Include="DaqStatusBaseType.h" />
     <ClInclude Include="Device\ADC4\SimulateAdc4.h" />
+    <ClInclude Include="Device\ADC4\SimulatedDataSourceAdc4.h" />
     <ClInclude Include="EditValue.h" />
     <ClInclude Include="LogDisplay.h" />
     <ClInclude Include="LogLines.h" />
@@ -173,7 +175,6 @@
     <ClInclude Include="MainWindow.h" />
     <ClInclude Include="RingBuffer.h" />
     <ClInclude Include="SimpleConfig.h" />
-    <ClInclude Include="SimulatedDataSource.h" />
     <ClInclude Include="StatusBox.h" />
     <ClInclude Include="ThreadWrapper.h" />
     <ClInclude Include="Timer.h" />
