--- a/fADC-demo-5.vcxproj.filters
+++ b/fADC-demo-5.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="ModalDialog.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Device\ADC4\CfgDlgAdc4Global.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DaqSystem.cpp">
@@ -177,6 +180,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Device\ADC4\SimulateAdc4.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Device\ADC4\CfgDlgAdc4Global.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
